--- a/Responsive/css/impl.css
+++ b/Responsive/css/impl.css
@@ -1,19 +1,31 @@
 /* main selectors */
-.twitter-timeline {
-	width:100% !important;
-	max-width:none !important;
-	height: 150px !important;
-	min-height: 240px !important;
+ .twitter-timeline {
+     width:100% !important;
+     max-width:none !important;
+     height:450px !important;
+    /* cambio twitter. antes 150 */
+     min-height:450px !important;
+    /* cambio twitter. antes 240 */
 }
-
-
-.pagination{margin: 10px 0;}
-.pagination .counter{display: inline;}
-.pagination .pagination-list{
-	display: inline;
-	list-style: none;
+ .twitter-timeline-430 {
+     width:100% !important;
+     max-width:none !important;
+     height:450px !important;
+    /* cambio twitter. antes 150 */
+     min-height:430px !important;
+    /* cambio twitter. antes 240 */
 }
-.pagination .pagination-list li{
-	display: inline;
-	margin: 0 5px;
+ .pagination {
+     margin:10px 0;
+}
+ .pagination .counter {
+     display:inline;
+}
+ .pagination .pagination-list {
+     display:inline;
+     list-style:none;
+}
+ .pagination .pagination-list li{
+     display: inline;
+     margin: 0 5px;
 }
